package edu.fiuba.algo3.modelo.Comandos;

public interface Accion {

     void ejecutar();
}
