@startuml
'https://plantuml.com/class-diagram

class Jugador {
    - nombre
    - color
    - raza

    + elegirAccion(mapa)
    + ejecutarAccion()
}

class Turno {
    - mapa
    - jugador
    +jugar()
    +cambiarTurno()
    +sigueJugando()
}

abstract class Raza {
    - bancoDeRecursos
    - capacidadSuministro

    + comprar(construccion)
    + comprar(unidad)
}

class Zerg {
    + agregar(construccion)
    + agregar(unidad)
    + recolectar()
    + crearUnidad()
}

class Protoss {
    + agregar(construccion)
    + agregar(unidad)
    + recolectar()
    + crearUnidad()
}

interface Accion {
    +ejecutar()
}

class CreacionUnidad {
    + CreacionUnidad(raza, coord, mapa)
    + ejecutar()
}

class CreacionConstruccion {
    + CreacionConstruccion(raza, coord, mapa)
    + ejecutar()
}

class Ataque {
    + Ataque(unidad, coord, mapa)
    + ejecutar()
}

class Movimiento {
    + Movimiento(coordSeleccionada, coordAMoverse, mapa)
    + ejecutar()
}

class Evolucion {
    + Evolucion(coord, mapa)
    + ejecutar()
}

class Mapa {
    - mapa[][] : Casillas

    + buscar(Coordenada) : Casilla
}

Raza <|.up. Zerg
Raza <|.up. Protoss

Mapa <- Raza
Raza --> Accion
Accion <|.. CreacionUnidad
Accion <|.. CreacionConstruccion
Accion <|.. Ataque
Accion <|.. Movimiento
Accion <|.. Evolucion





@enduml